@@ -5,6 +5,8 @@
 -added sq_getreleasehook
 -added thread.wakeupthrow()
 -added sq_pushthread
+-added \u and \U escape sequence for UTF8,UTF16 or UCS4 characters
+-the escape character \x is based on sizeof(SQChar)
 -fixed optimizer bug in compound arith oprators(+=,-= etc...)
 -fixed sq_getrefvmcount() (thx Gerrit)
 -fixed sq_getrefcount() when no references were added with sq_addref() (thx Gerrit)
